// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app filling progress 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="progress"
    >
      <div
        aria-valuemax={100}
        aria-valuemin="0"
        aria-valuenow={0}
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
  <div
    className="form entered"
  >
    <label>
      Full Name
    </label>
    <input
      name="fullName"
      onChange={[Function]}
      required={true}
      type="text"
      value=""
    />
    <div>
      <button
        onClick={[Function]}
      >
        next
      </button>
    </div>
  </div>
</div>
`;

exports[`app render 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="progress"
    >
      <div
        aria-valuemax={100}
        aria-valuemin="0"
        aria-valuenow={0}
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>
  <div
    className="form entered"
  >
    <label>
      Full Name
    </label>
    <input
      name="fullName"
      onChange={[Function]}
      required={true}
      type="text"
      value=""
    />
    <div>
      <button
        onClick={[Function]}
      >
        next
      </button>
    </div>
  </div>
</div>
`;

exports[`progress bar 1`] = `
<div>
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin="0"
      aria-valuenow={0}
      className="progress-bar"
      role="progressbar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
</div>
`;
